Revert "Fix the tests"
This reverts commit 421c3997cbb31b2f3c1ea02a79ed5d8908d2c4d4.