@@ -27,7 +27,6 @@ import org.apache.pulsar.client.admin.PulsarAdminException;
 import org.apache.pulsar.client.api.AuthenticationFactory;
 import org.apache.pulsar.client.impl.auth.AuthenticationToken;
 import org.apache.pulsar.common.policies.data.AuthAction;
-import org.apache.pulsar.common.policies.data.TenantInfo;
 import org.apache.pulsar.tests.integration.containers.PulsarContainer;
 import org.apache.pulsar.tests.integration.containers.ZKContainer;
 import org.apache.pulsar.tests.integration.topologies.PulsarCluster;
@@ -41,13 +40,10 @@ import org.testng.annotations.BeforeClass;
 import org.testng.annotations.Test;
 
 import java.io.File;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.fail;
@@ -194,17 +190,15 @@ public class PackagesOpsWithAuthTest {
 
         // do some operation without grant any permissions
         try {
-            clientAdmin.packages().listPackages("function", "public/default");
+            List<String> packagesName = clientAdmin.packages().listPackages("function", "public/default");
             fail("list package operation should fail because the client hasn't permission to do");
         } catch (PulsarAdminException e) {
             assertEquals(e.getStatusCode(), 401);
         }
 
         // grant package permission to the role
-        TenantInfo tenantInfo = new TenantInfo();
-        tenantInfo.setAdminRoles(new HashSet<>(Arrays.asList(SUPER_USER_ROLE, PROXY_ROLE, REGULAR_USER_ROLE)));
-        tenantInfo.setAllowedClusters(new HashSet<>(superUserAdmin.clusters().getClusters()));
-        superUserAdmin.tenants().updateTenant("public", tenantInfo);
+        superUserAdmin.namespaces().grantPermissionOnNamespace("public/default",
+            REGULAR_USER_ROLE, Set.of(AuthAction.packages));
 
         // then do some package operations again, it should success
         List<String> packagesName = clientAdmin.packages().listPackages("function", "public/default");
